--- a/llcom/App.config
+++ b/llcom/App.config
@@ -42,5 +42,55 @@
     </assemblyBinding>
   </runtime>
   <userSettings>
+    <llcom.Properties.Settings>
+      <setting name="dataToSend" serializeAs="String">
+        <value>uart data</value>
+      </setting>
+      <setting name="BaudRate" serializeAs="String">
+        <value>115200</value>
+      </setting>
+      <setting name="autoReconnect" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="autoSaveLog" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="showHex" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="topmost" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="parity" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="timeout" serializeAs="String">
+        <value>20</value>
+      </setting>
+      <setting name="dataBits" serializeAs="String">
+        <value>8</value>
+      </setting>
+      <setting name="stopBit" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="sendScript" serializeAs="String">
+        <value>默认</value>
+      </setting>
+      <setting name="runScript" serializeAs="String">
+        <value>example</value>
+      </setting>
+      <setting name="quickData" serializeAs="String">
+        <value>{"data":[{"id":1,"text":"example string","hex":false},{"id":2,"text":"lua可通过接口获取此处数据","hex":false},{"id":3,"text":"aa 01 02 0d 0a","hex":true},{"id":4,"text":"此处数据会被lua处理","hex":false}]}</value>
+      </setting>
+      <setting name="UpgradeRequired" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="maxLength" serializeAs="String">
+        <value>10240</value>
+      </setting>
+      <setting name="autoUpdate" serializeAs="String">
+        <value>True</value>
+      </setting>
+    </llcom.Properties.Settings>
   </userSettings>
 </configuration>
