--- a/llcom/Properties/Settings.settings
+++ b/llcom/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="dataToSend" Type="System.String" Scope="User">
-      <Value Profile="(Default)">uart dataplVIzj85gvLDrDqtVxftzTb78</Value>
+      <Value Profile="(Default)">uart data</Value>
     </Setting>
     <Setting Name="BaudRate" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">115200</Value>
@@ -24,7 +24,7 @@
       <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="timeout" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">50</Value>
+      <Value Profile="(Default)">20</Value>
     </Setting>
     <Setting Name="dataBits" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">8</Value>
@@ -42,9 +42,6 @@
       <Value Profile="(Default)">{"data":[{"id":1,"text":"example string","hex":false},{"id":2,"text":"lua可通过接口获取此处数据","hex":false},{"id":3,"text":"aa 01 02 0d 0a","hex":true},{"id":4,"text":"此处数据会被lua处理","hex":false}]}</Value>
     </Setting>
     <Setting Name="UpgradeRequired" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">True</Value>
-    </Setting>
-    <Setting Name="bitDelay" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="maxLength" Type="System.UInt32" Scope="User">
